--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4"
