--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "multer": "^1.4.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "zarinpal-checkout": "^0.2.7"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
