--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.19.2",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "helmet": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "reflect-metadata": "^0.1.13",
